--- a/_includes/post.html
+++ b/_includes/post.html
@@ -17,3 +17,5 @@
 		{% include disqus.html %}
 	</div>
 </article>
+
+<script id="dsq-count-scr" src="//example-com-inve9nzzjl.disqus.com/count.js" async></script>
