--- a/_includes/post.html
+++ b/_includes/post.html
@@ -18,4 +18,4 @@
 	</div>
 </article>
 
-<script id="dsq-count-scr" src="https:////yangji89-github-io.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="https://yangji89-github-io.disqus.com/count.js" async></script>
