--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 {% include post.html %}
-{% include disqus.html -%}
+{%- if site.disqus.shortname -%}
+    {% include disqus.html -%}
+{% endif %}
