--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -12,7 +12,7 @@
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
     // s.src = 'https://https-yangji89-github-io.disqus.com/embed.js';
-    s.src = 'https://yangji-1.disqus.com/embed.js';
+    s.src = 'https://yangji89-github-io.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
