--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -13,6 +13,7 @@
     var d = document, s = d.createElement('script');
     // s.src = 'https://https-yangji89-github-io.disqus.com/embed.js';
     s.src = 'https://yangji89-github-io.disqus.com/embed.js';
+    s.src = 'https://https-infiduk-github-io.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
