--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 {% include post.html %}
-{%- if site.disqus.shortname -%}
+<!-- {%- if site.disqus.shortname -%} -->
     {% include disqus.html -%}
-{% endif %}
+<!-- {% endif %} -->
