--- a/_includes/page.html
+++ b/_includes/page.html
@@ -8,4 +8,9 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
+
+	<div class="container" id="post-disqus">
+		{% if page.comments %}
+		{% endif %}
+	</div>
 </article>
