--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,5 +3,5 @@ layout: default
 ---
 {% include post.html %}
 <!-- {%- if site.disqus.shortname -%} -->
-    {% include disqus.html -%}
+    <!-- {% include disqus.html -%} -->
 <!-- {% endif %} -->
