--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,5 @@ layout: default
 <!-- {%- if site.disqus.shortname -%} -->
     <!-- {% include disqus.html -%} -->
 <!-- {% endif %} -->
+
+{% include disqus.html -%}
