--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,3 +2,12 @@
 layout: default
 ---
 {% include post.html %}
+
+
+<script src="https://utteranc.es/client.js"
+        repo="yangji89/yangji89.github.io"
+        issue-term="url"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
