--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: default
 ---
 {% include post.html %}
 
+<div>
+    comments test ing...
+</div>
 
 <script src="https://utteranc.es/client.js"
         repo="yangji89/yangji89.github.io"
