--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,17 @@ layout: default
     comments test ing...
 </div>
 
-<script src="https://utteranc.es/client.js"
+<!-- <script src="https://utteranc.es/client.js"
         repo="yangji89/yangji89.github.io"
         issue-term="url"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script> -->
+
+<script src="https://utteranc.es/client.js"
+        repo="yangji89/yangji89.github.io"
+        issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
         async>
