--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,17 @@ layout: default
         async>
 </script> -->
 
-<script src="https://utteranc.es/client.js"
+<!-- <script src="https://utteranc.es/client.js"
         repo="yangji89/yangji89.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script> -->
+
+
+<script src="https://utteranc.es/client.js"
+        repo="yangji89/comments"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
